--- a/project/roles/rabbitmq/tasks/main.yaml
+++ b/project/roles/rabbitmq/tasks/main.yaml
@@ -5,12 +5,18 @@
 #   ansible.builtin.shell: curl -s https://packagecloud.io/install/repositories/rabbitmq/rabbitmq-server/script.rpm.sh | bash
 
 - name: Install Erlang and Configure RabbitMQ Repo
-  ansible.builtin.shell:
+  ansible.builtin.shell: cd ~ && sudo wget https://packages.erlang-solutions.com/erlang/rpm/centos/7/x86_64/esl-erlang_23.3.1-1~centos~7_amd64.rpm
     # List of commands to execute sequentially
-    - cd ~ && sudo wget https://packages.erlang-solutions.com/erlang/rpm/centos/7/x86_64/esl-erlang_23.3.1-1~centos~7_amd64.rpm
-    - sudo yum -y install esl-erlang*.rpm
-    - sudo wget https://github.com/rabbitmq/rabbitmq-server/releases/download/v3.8.19/rabbitmq-server-3.8.19-1.el7.noarch.rpm
+
+- name: Install Erlang 
+  ansible.builtin.shell: sudo yum -y install esl-erlang*.rpm
+ 
+- name: Install RabbitMQ Repo
+  ansible.builtin.shell: sudo wget https://github.com/rabbitmq/rabbitmq-server/releases/download/v3.8.19/rabbitmq-server-3.8.19-1.el7.noarch.rpm
     # - sudo yum -y install rabbitmq-server*.rpm
+
+- name: Install Erlang and Configure RabbitMQ Repo
+  ansible.builtin.shell:
 
 - name: Installing {{COMPONENT}}
   ansible.builtin.package:
