--- a/project/roles/rabbitmq/tasks/main.yaml
+++ b/project/roles/rabbitmq/tasks/main.yaml
@@ -13,15 +13,15 @@
  
 - name: Install RabbitMQ Repo
   ansible.builtin.shell: sudo wget https://github.com/rabbitmq/rabbitmq-server/releases/download/v3.8.19/rabbitmq-server-3.8.19-1.el7.noarch.rpm
-    # - sudo yum -y install rabbitmq-server*.rpm
+    
+- name: Install RabbitMQ 
+  ansible.builtin.shell: sudo yum -y install rabbitmq-server*.rpm
 
-- name: Install Erlang and Configure RabbitMQ Repo
-  ansible.builtin.shell:
 
-- name: Installing {{COMPONENT}}
-  ansible.builtin.package:
-    name: rabbitmq-server
-    state: present
+# - name: Installing {{COMPONENT}}
+#   ansible.builtin.package:
+#     name: rabbitmq-server
+#     state: present
 
 - name: Starting {{COMPONENT}}
   ansible.builtin.systemd_service:
