--- a/project/roles/rabbitmq/tasks/main.yaml
+++ b/project/roles/rabbitmq/tasks/main.yaml
@@ -23,21 +23,21 @@
 #     name: rabbitmq-server
 #     state: present
 
-- name: Starting {{COMPONENT}}
-  ansible.builtin.systemd_service:
-    state: started
-    name: rabbitmq-server
-    enabled: yes 
+# - name: Starting {{COMPONENT}}
+#   ansible.builtin.systemd_service:
+#     state: started
+#     name: rabbitmq-server
+#     enabled: yes 
 
-- name: Creating {{APPUSER}} user for {{COMPONENT}}
-  community.rabbitmq.rabbitmq_user:
-    user: roboshop
-    password: roboshop123
-    vhost: /
-    configure_priv: .*
-    read_priv: .*
-    write_priv: .*
-    state: present
+# - name: Creating {{APPUSER}} user for {{COMPONENT}}
+#   community.rabbitmq.rabbitmq_user:
+#     user: roboshop
+#     password: roboshop123
+#     vhost: /
+#     configure_priv: .*
+#     read_priv: .*
+#     write_priv: .*
+#     state: present
 
 # - name: Configuring Name
 #   ansible.builtin.shell: set-hostname {{COMPONENT}}
