--- a/project/roles/rabbitmq/tasks/main.yaml
+++ b/project/roles/rabbitmq/tasks/main.yaml
@@ -21,20 +21,20 @@
 - name: Install RabbitMQ Repo
   ansible.builtin.shell: sudo wget https://github.com/rabbitmq/rabbitmq-server/releases/download/v3.8.19/rabbitmq-server-3.8.19-1.el7.noarch.rpm
     
-- name: Install RabbitMQ 
-  ansible.builtin.shell: sudo yum -y install rabbitmq-server*.rpm
+# - name: Install RabbitMQ 
+#   ansible.builtin.shell: sudo yum -y install rabbitmq-server*.rpm
 
 
-# - name: Installing {{COMPONENT}}
-#   ansible.builtin.package:
-#     name: rabbitmq-server
-#     state: present
+- name: Installing {{COMPONENT}}
+  ansible.builtin.package:
+    name: rabbitmq-server
+    state: present
 
-# - name: Starting {{COMPONENT}}
-#   ansible.builtin.systemd_service:
-#     state: started
-#     name: rabbitmq-server
-#     enabled: yes 
+- name: Starting {{COMPONENT}}
+  ansible.builtin.systemd_service:
+    state: started
+    name: rabbitmq-server
+    enabled: yes 
 
 # - name: Creating {{APPUSER}} user for {{COMPONENT}}
 #   community.rabbitmq.rabbitmq_user:
