--- a/project/roles/rabbitmq/tasks/main.yaml
+++ b/project/roles/rabbitmq/tasks/main.yaml
@@ -30,11 +30,11 @@
     name: rabbitmq-server
     state: present
 
-# - name: Starting {{COMPONENT}}
-#   ansible.builtin.systemd_service:
-#     state: started
-#     name: rabbitmq-server
-#     enabled: yes 
+- name: Starting {{COMPONENT}}
+  ansible.builtin.systemd_service:
+    state: started
+    name: rabbitmq-server
+    enabled: yes 
 
 # - name: Creating {{APPUSER}} user for {{COMPONENT}}
 #   community.rabbitmq.rabbitmq_user:
