--- a/project/roles/rabbitmq/tasks/main.yaml
+++ b/project/roles/rabbitmq/tasks/main.yaml
@@ -31,8 +31,7 @@
     state: present
 
 - name: Starting {{COMPONENT}}
-  # ansible.builtin.systemd_service:
-  systemd_service:
+  ansible.builtin.systemd_service:
     state: started
     name: rabbitmq-server
     enabled: yes 
